--- a/exp/libri2mix/config_log_mel.yaml
+++ b/exp/libri2mix/config_log_mel.yaml
@@ -59,7 +59,7 @@ init: null
 
 # input related
 input_size: 128 # Mel spectrogram the input size should be 80
-use_preprocessor: true
+use_preprocessor: False
 audio_max_duration: 60
 codec_token_rate: 25
 
