--- a/exp/libri2mix/config_log_mel.yaml
+++ b/exp/libri2mix/config_log_mel.yaml
@@ -50,8 +50,8 @@ valid_data_path_and_name_and_type: [
         "codec_aux",
         "npy"
     ],
-
 ]
+allow_variable_data_key: true
 
 grad_clip: 5
 seed: 1234
