--- a/exp/libri2mix/config_log_mel copy_aux_5s.yaml
+++ b/exp/libri2mix/config_log_mel copy_aux_5s.yaml
@@ -51,6 +51,7 @@ valid_data_path_and_name_and_type: [
         "npy"
     ],
 ]
+allow_variable_data_key: true
 
 grad_clip: 5
 seed: 1234
@@ -138,11 +139,7 @@ allow_variable_data_keys: true
 drop_last: false
 fold_length: []
 
-### Mel config ###
-mel_config:
-  n_fft: 512
-  hop_size: 256
-  log_mel: True
+### Decides the 
 
 optim:
     type: Adam
