--- a/exp/libri2mix/config_log_mel_aux_5s.yaml
+++ b/exp/libri2mix/config_log_mel_aux_5s.yaml
@@ -51,7 +51,6 @@ valid_data_path_and_name_and_type: [
         "npy"
     ],
 ]
-allow_variable_data_key: true
 
 grad_clip: 5
 seed: 1234
@@ -139,7 +138,14 @@ allow_variable_data_keys: true
 drop_last: false
 fold_length: []
 
-### Decides the 
+### Mel config ###
+mel_config:
+  n_fft: 512
+  hop_size: 256
+  log_mel: True
+
+### Max aux length ###
+max_aux_ds: 5
 
 optim:
     type: Adam
@@ -159,5 +165,3 @@ epoch: 50
 # training process
 # num_iters_per_epoch: 10000
 grad_clip: 5
-
-  
